# sp-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: engine_metadata.h  sp.h
